tests/NormalTests/paczka1/small_fuzzy/78120942.err
Error in line 5: nvdE S427 196,25
Error in line 8: S427 S427 29,7
